fix button bugs on dark mode

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,13 +1,11 @@
 @import 'reset';
 
-$small: 280px;
+$small: 320px;
 $medium: 768px;
 $large: 992px;
 $extra-large: 1260px;
 $extra-extra-large: 1560px;
 
-// just for the background image on the home page
-$sm-1: 410px;
 
 :root {
     font-family: Arial, sans-serif;
@@ -30,7 +28,7 @@ $sm-1: 410px;
     input,
     textarea {
         color: rgb(255, 254, 240);
-    } 
+    }
 
     svg {
         fill: rgb(255, 254, 240);
@@ -63,6 +61,7 @@ $sm-1: 410px;
         padding: 5px 10px 7px 10px;
         border-radius: 5px;
         border: 2px solid rgb(250, 250, 250);
+        background-color: white;
 
 
         >svg {
@@ -74,10 +73,6 @@ $sm-1: 410px;
 
         }
 
-        &:hover {
-            background-color: rgb(240, 240, 240);
-
-        }
 
         #nav {
             display: none;
@@ -87,7 +82,7 @@ $sm-1: 410px;
             &-initial {
                 display: flex;
                 justify-content: center;
-                margin-top: 8px;
+                margin-top: 5px;
                 border-radius: 0 20px 0 0;
                 padding: 20px 0;
                 width: 100%;
@@ -97,8 +92,19 @@ $sm-1: 410px;
                 background-position: 40% 50%;
                 -webkit-background-clip: text;
 
+
+                >h1 {
+                    @media (prefers-color-scheme: dark) {
+                        background-color: transparent;
+                    }
+                }
+
                 &:hover {
-                    background-color: rgb(240, 240, 240);
+                    background: url("https://phandroid.s3.amazonaws.com/wp-content/uploads/2014/05/rainbow-nebula.jpg") repeat;
+                    background-position: 40% 50%;
+                    background-color: transparent;
+                    color: rgb(255, 254, 240);
+
                 }
             }
 
@@ -114,11 +120,30 @@ $sm-1: 410px;
                     >a {
                         display: block;
                         padding: 15px 10px 15px 15px;
+
+                        &:hover {
+                            background: url("https://phandroid.s3.amazonaws.com/wp-content/uploads/2014/05/rainbow-nebula.jpg") repeat;
+                            background-position: 40% 50%;
+                            color: rgb(255, 254, 240);
+    
+                        }
+
+                        @media (prefers-color-scheme: dark) {
+                            &:hover {
+                                background: url("https://phandroid.s3.amazonaws.com/wp-content/uploads/2014/05/rainbow-nebula.jpg") repeat;
+                                background-position: 40% 50%;
+                                background-clip: text;
+                                color: rgb(255, 254, 240);
+                                background-color: transparent;
+                            }
+                        }
                     }
 
-                    &:hover {
-                        background-color: rgb(240, 240, 240);
-                    }
+                    
+
+                    
+
+
                 }
 
 
@@ -140,11 +165,21 @@ $sm-1: 410px;
 
                     @media (prefers-color-scheme: dark) {
                         fill: rgb(255, 254, 240);
+                        background-color: transparent;
                     }
+
+
                 }
 
                 &:hover {
-                    background-color: rgb(240, 240, 240);
+                    background: url("https://phandroid.s3.amazonaws.com/wp-content/uploads/2014/05/rainbow-nebula.jpg") repeat;
+                    background-position: 40% 50%;
+
+                    >svg {
+
+                        fill: rgb(255, 254, 240);
+
+                    }
                 }
             }
 
@@ -153,6 +188,16 @@ $sm-1: 410px;
                 display: flex;
             }
 
+        }
+
+        @media (prefers-color-scheme: dark) {
+            background-color: rgb(30, 30, 30);
+             border: 1px solid rgb(255, 254, 240);
+             opacity: 0.7;
+
+             >svg {
+                    fill: rgb(255, 254, 240);
+             }
         }
 
         @media (min-width: $medium) {
@@ -170,10 +215,7 @@ $sm-1: 410px;
             border-top: 0;
             border-bottom: 0;
             box-shadow: 0 0 25px 0px rgba(0, 0, 0, 0.2);
-
-            &:hover {
-                background-color: white;
-            }
+            background-color: transparent;
         }
 
 
@@ -184,6 +226,7 @@ $sm-1: 410px;
     // setting padding on various screen sizes using a single container div
     #container {
         overflow: hidden;
+        padding: 0 10px;
 
         @media (min-width: $small) {
             padding: 0 20px;
@@ -227,7 +270,7 @@ $sm-1: 410px;
                 .title {
                     position: relative;
                     font-weight: 900;
-                    font-size: 40px;
+                    font-size: 30px;
                     color: transparent;
                     background: url("https://phandroid.s3.amazonaws.com/wp-content/uploads/2014/05/rainbow-nebula.jpg") repeat;
                     background-position: 40% 50%;
@@ -272,7 +315,7 @@ $sm-1: 410px;
             display: flex;
             flex-direction: column;
             align-items: center;
-
+            z-index: 1;
 
         }
 
@@ -291,6 +334,10 @@ $sm-1: 410px;
 
         #portfolio-title {
             font-size: 1.5rem;
+
+            @media (min-width: $medium) {
+                font-size: 2rem;
+            }
         }
 
         #portfolio {
@@ -659,6 +706,10 @@ $sm-1: 410px;
 
                 >h3 {
                     font-size: 1.5rem;
+
+                    @media (min-width: $medium) {
+                        font-size: 2rem;
+                    }
 
                 }
 
